[B][COLOR red]Update - v3.6.0 - April 2, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Compressed artwork to lessen footprint.[/I]
[COLOR yellow]--[/COLOR][I] Added new setting to enable or disable Calendar
    (TVMaze) extended meta.  When disabled(default)
    the Calendar list items will now load faster without
    the extra meta and artwork.[/I]
[COLOR yellow]--[/COLOR][I] resolveURL is now maintained by gural so
    repo has been updated.[/I]

[B][COLOR red]Update - v3.5.9 - March 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed resolveURL notification from previous
    update.[/I]
[COLOR yellow]--[/COLOR][I] Updated bookmarks caching method to now also
    record show name and year for better tracking of
    progress indicators.  This requires you to clear old
    bookmarks for the new update to be in use.[/I]

[B][COLOR red]Update - v3.5.8 - March 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate seasoncount.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate resume point
    saved. Issue would lose progress indicators for some shows.[/I]
[COLOR yellow]--[/COLOR][I] added notification when resolveURL fails for
    cached torrents.[/I]

[B][COLOR red]Update - v3.5.7 - March 24, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue with random duplicate list items
    after playback ends when Autoplay is enabled.[/I]
[COLOR yellow]--[/COLOR][I] Fixed trakt api issue randomly placing
    Season0 at end of users watch list. This would
    alter the Next Up-Progress item.[/I]
[COLOR yellow]--[/COLOR][I] Fixed trakt api episode count not including
    Season0 when enabled. This would cause shows
    to vanish from Trakt Progress when the count was
    exceeded.[/I]
[COLOR yellow]--[/COLOR][I] Added color setting for Movies who's theatrical
    release date is greater than current date.[/I]

[B][COLOR red]Update - v3.5.6 - March 20, 2020[/COLOR][/B]