@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.6.0" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.6.1" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,14 +38,15 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.6.0 - April 2, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Compressed artwork to lessen footprint.[/I]
-[COLOR yellow]--[/COLOR][I] Added new setting to enable or disable Calendar
-    (TVMaze) extended meta.  When disabled(default)
-    the Calendar list items will now load faster without
-    the extra meta and artwork.[/I]
-[COLOR yellow]--[/COLOR][I] resolveURL is now maintained by gural so
-    repo has been updated.[/I]
+[B][COLOR red]Update - v3.6.1 - April 14, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Calendar show titles.[/I]
+[COLOR yellow]--[/COLOR][I] fixed typo with RD uncached torrent removal
+    using PM setting.[/I]
+[COLOR yellow]--[/COLOR][I] fixed issue with RD uncached torrent check
+    failing due to RD response converting hases to
+    lower case.[/I]
+[COLOR yellow]--[/COLOR][I] fixed Trakt Progress episode sort issue from
+    Trakt response.[/I]
 		</news>
 	</extension>
 </addon>
