@@ -381,7 +381,11 @@ class TVshows:
 		dbcur.connection.commit()
 		dbcon.close()
 		url = self.search_link + urllib.quote_plus(q)
-		self.get(url)
+		if int(control.getKodiVersion()) >= 18:
+			self.get(url)
+		else:
+			url = '%s?action=tvshowPage&url=%s' % (sys.argv[0], urllib.quote_plus(url))
+			control.execute('Container.Update(%s)' % url)
 
 
 	def search_term(self, name):
