@@ -1,3 +1,14 @@
+[B][COLOR red]Update - v3.6.1 - April 14, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Calendar show titles.[/I]
+[COLOR yellow]--[/COLOR][I] fixed typo with RD uncached torrent removal
+    using PM setting.[/I]
+[COLOR yellow]--[/COLOR][I] fixed issue with RD uncached torrent check
+    failing due to RD response converting hases to
+    lower case.[/I]
+[COLOR yellow]--[/COLOR][I] fixed Trakt Progress episode sort issue from
+    Trakt response.[/I]
+
+
 [B][COLOR red]Update - v3.6.0 - April 2, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Compressed artwork to lessen footprint.[/I]
 [COLOR yellow]--[/COLOR][I] Added new setting to enable or disable Calendar
